# clippy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-release.yml
clippy/: clippy.py
clippy/tools/: ai.py  harvest.py  tmetric.py
clippy/utils/: config.py  helper.py  logger.py
test/: test_ai_tools.py
