[project]
name = "clippy"
version = "0.1.1"
description = ""
authors = [
    {name = "John Carpenter",email = "john@2linessoftware.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-openai (>=0.3.4,<0.4.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "langchain-community (>=0.3.17,<0.4.0)"
]   
packages = [{include = "clippy", from = "clippy"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clippy = "clippy.clippy:clippy"

[tool.poetry.group.dev.dependencies]
setuptools = "^75.8.0"
pytest = "^8.3.4"

